feat: drain fluid by block height